Fix slideshow image distortion on collection detail page

--- a/bordercore/static/scss/pages/_blobs.scss
+++ b/bordercore/static/scss/pages/_blobs.scss
@@ -183,7 +183,7 @@
   }
 }
 
-.slide-show {
+.slideshow-overlay {
   position: fixed;
   z-index: 2000;
   top: 0;
@@ -194,12 +194,6 @@
   align-items: center;
   justify-content: center;
   background-color: rgb(0 0 0 / 90%);
-
-  img {
-    max-width: 90%;
-    max-height: 90%;
-    object-fit: contain;
-  }
 
   .slide-nav {
     position: absolute;
@@ -219,6 +213,12 @@
       right: 1rem;
     }
   }
+}
+
+.slide-show {
+  max-width: 90%;
+  max-height: 90%;
+  object-fit: contain;
 }
 
 // Blob detail page
